# tree-sitter-grammars

./: Cargo.toml  README.md  flake.nix  languages.toml
src/: lib.rs  main.rs
wasm/: starlark.wasm  tree-sitter-ada.wasm  tree-sitter-agda.wasm  tree-sitter-capnp.wasm  tree-sitter-clojure.wasm  tree-sitter-d.wasm  tree-sitter-dockerfile.wasm  tree-sitter-elisp.wasm  tree-sitter-elixir.wasm  tree-sitter-elm.wasm  tree-sitter-erlang.wasm  tree-sitter-gleam.wasm  tree-sitter-go.wasm  tree-sitter-hack.wasm  tree-sitter-hare.wasm  tree-sitter-hcl.wasm  tree-sitter-html.wasm  tree-sitter-java.wasm  tree-sitter-jsdoc.wasm  tree-sitter-llvm.wasm  tree-sitter-lua.wasm  tree-sitter-org.wasm  tree-sitter-pascal.wasm  tree-sitter-protobuf.wasm  tree-sitter-ql.wasm  tree-sitter-r.wasm  tree-sitter-racket.wasm  tree-sitter-regex.wasm  tree-sitter-ruby.wasm  tree-sitter-rust.wasm  tree-sitter-scala.wasm  tree-sitter-scheme.wasm  tree-sitter-toml.wasm
